2004-02-05  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-host-utils.c (g_gethostbyname_r): Replace the herr
	argument with a GError to make the interface a bit nicer to use.
	(g_gethostbyaddr_r): Same.

	* gmime/url-scanner.c: Added single/double quotes to url_braces[]
	in case the user is quoting the url.
	(g_url_web_end): Add "-;:" to list of punctuation to strip off the
	end of urls. Also fixed to handle user@domain's
	(g_url_addrspec_start): Strip open brace characters from the
	beginning of the addr.
	(g_url_web_start): Make sure "www" wasn't part of something not a
	url (like "Ewww.Gross") by check that pos[-1] is either an open
	brace or whitespace.
	(g_url_addrspec_end): Don't allow toplevel domain addr-specs
	(if we encounter something that looks like it is a toplevel domain
	addr, it is more likely to be bogus than correct).

2004-02-04  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-stream-buffer.c (g_mime_stream_buffer_gets): Strip
	off \r too if the stream is in the canonical form.

	* gmime/gmime.c (g_mime_shutdown): Oops, call
	g_mime_charset_map_shutdown(), not g_mime_charset_shutdown().

2004-01-26  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime.c (g_mime_shutdown): New public function to shutdown
	GMime. Fixes a segfault in applications that dynamically
	load/unload GMime during execution.

	* gmime/gmime-iconv.c (g_mime_iconv_init): Don't register an
	atexit handler.
	(g_mime_iconv_shutdown): Make public.

	* gmime/gmime-charset.c (g_mime_charset_map_init): Don't set a
	g_atexit handler for the shutdown routine.
	(g_mime_charset_map_shutdown): Make public.

2004-01-25  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-param.c: Disable debugging and conditionally disable
	warnings.

	* gmime/gmime-multipart.c: Disable debugging.

	* gmime/gmime-stream.c: Disable debugging.

	* gmime/internet-address.c: Same.

	* gmime/gmime-parser.c: Conditionally disable warnings.

2004-01-19  Jeffrey Stedfast  <fejj@ximian.com>
