@@ -1,3 +1,12 @@
+2004-02-06  Jeffrey Stedfast  <fejj@ximian.com>
+
+	* gmime/gmime-error.h: Changed the #define of GMIME_ERROR_QUARK to
+	just be the GQuark variable. Also added GMIME_ERROR_IS_SYSTEM() to
+	decide if an error is a system error (aka errno) or a GMime error.
+
+	* gmime/gmime.c: Make gmime_error_quark an actual variable and
+	initialise it here.
+
 2004-02-05  Jeffrey Stedfast  <fejj@ximian.com>
 
 	* gmime/gmime-host-utils.c (g_gethostbyname_r): Replace the herr
